--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ nav {
 .nav-item {
   align-items: center;
   border-radius: 5px;
- /* display: flex;*/
+  display: flex;
   font-family: var(--secondary-font);
   height: 30px;
   justify-content: center;
